Add Exception Handling and Recovery

--- a/agentic_design/04_mcp.ipynb
+++ b/agentic_design/04_mcp.ipynb
@@ -331,13 +331,266 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "348d92e9-de76-49eb-bab2-28558d5a712a",
+     "nuid": "5a668afd-95b1-46c7-927a-f31158413783",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
-   "source": []
+   "source": [
+    "### Add exception handling + recovery"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "eb5fd08b-addf-4dbe-adb7-d7aa749075a1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "server_code = r'''\n",
+    "from mcp.server.fastmcp import FastMCP\n",
+    "import re\n",
+    "\n",
+    "mcp = FastMCP(\"robust-location-server\")\n",
+    "\n",
+    "@mcp.tool()\n",
+    "def get_precise_location_info(address: str) -> dict:\n",
+    "    m = re.search(r\"\\b\\d{5}\\b\", address)\n",
+    "    if not m:\n",
+    "        raise ValueError(\"No ZIP code found; precise lookup failed.\")\n",
+    "    return {\"ok\": True, \"type\": \"precise\", \"address\": address, \"zip\": m.group(0)}\n",
+    "\n",
+    "@mcp.tool()\n",
+    "def get_general_area_info(query: str) -> dict:\n",
+    "    parts = [p.strip() for p in query.split(\",\") if p.strip()]\n",
+    "    # \"street, city, state\" -> city=parts[1]\n",
+    "    # \"city, state\" -> city=parts[0]\n",
+    "    if len(parts) >= 2:\n",
+    "        city_guess = parts[1]\n",
+    "    elif len(parts) == 1:\n",
+    "        city_guess = parts[0]\n",
+    "    else:\n",
+    "        city_guess = query.strip()\n",
+    "    return {\"ok\": True, \"type\": \"general\", \"city_guess\": city_guess, \"parts\": parts}\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    mcp.run()\n",
+    "'''\n",
+    "with open(\"/tmp/mcp_location_server.py\", \"w\") as f:\n",
+    "    f.write(server_code)\n",
+    "\n",
+    "print(\"Updated server.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "35ffa812-31c2-4438-81b5-23c399e810f6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import os, sys, asyncio\n",
+    "from mcp import ClientSession, StdioServerParameters\n",
+    "from mcp.client.stdio import stdio_client\n",
+    "\n",
+    "import asyncio\n",
+    "\n",
+    "def content_to_text(result) -> str:\n",
+    "    \"\"\"\n",
+    "    Convert MCP content parts to a readable string.\n",
+    "    \"\"\"\n",
+    "    parts = []\n",
+    "    for c in getattr(result, \"content\", []) or []:\n",
+    "        # TextContent has .text\n",
+    "        txt = getattr(c, \"text\", None)\n",
+    "        parts.append(txt if txt is not None else str(c))\n",
+    "    return \"\\n\".join(parts).strip()\n",
+    "\n",
+    "async def safe_call(session, tool_name: str, args: dict, timeout_s: float = 15.0):\n",
+    "    \"\"\"\n",
+    "    Returns (ok: bool, payload: dict|str)\n",
+    "    ok=False if:\n",
+    "      - timeout/exception occurs, OR\n",
+    "      - MCP result has isError=True\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        res = await asyncio.wait_for(session.call_tool(tool_name, args), timeout=timeout_s)\n",
+    "\n",
+    "        # ✅ MCP-level tool error (server returned error result)\n",
+    "        if getattr(res, \"isError\", False):\n",
+    "            return False, content_to_text(res) or f\"Tool {tool_name} returned error.\"\n",
+    "\n",
+    "        # ✅ success\n",
+    "        return True, res\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        return False, f\"{type(e).__name__}: {e}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d2d4975f-d32f-4f65-9587-ed17fac6e4ae",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def extract_text_content(call_tool_result):\n",
+    "    \"\"\"\n",
+    "    MCP results often return a list of 'content parts'.\n",
+    "    We'll stringify safely so you always see something usable.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        return str(call_tool_result.content)\n",
+    "    except Exception:\n",
+    "        return str(call_tool_result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3e8de537-f546-4bac-aa0d-f9a749cd7c02",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "async def run_robust_location_flow(user_query: str):\n",
+    "    state.clear()\n",
+    "    state[\"user_query\"] = user_query\n",
+    "    state[\"primary_location_failed\"] = False\n",
+    "    state[\"location_result\"] = None\n",
+    "\n",
+    "    server_params = StdioServerParameters(\n",
+    "        command=sys.executable,\n",
+    "        args=[\"/tmp/mcp_location_server.py\"],\n",
+    "        env=os.environ.copy(),\n",
+    "    )\n",
+    "\n",
+    "    async with stdio_client(server_params) as (read, write):\n",
+    "        async with ClientSession(read, write) as session:\n",
+    "            await session.initialize()\n",
+    "\n",
+    "            # (Optional) sanity: list tools once\n",
+    "            tools = await session.list_tools()\n",
+    "            tool_names = [t.name for t in tools.tools]\n",
+    "            # print(\"Tools:\", tool_names)\n",
+    "\n",
+    "            # ---- Primary attempt\n",
+    "            ok, res_or_err = await safe_call(session, \"get_precise_location_info\", {\"address\": user_query}, timeout_s=10.0)\n",
+    "\n",
+    "            if ok:\n",
+    "                state[\"location_result\"] = content_to_text(res_or_err)  # will be normal success content\n",
+    "                state[\"primary_location_failed\"] = False\n",
+    "            else:\n",
+    "                state[\"primary_location_failed\"] = True\n",
+    "                state[\"primary_error\"] = res_or_err\n",
+    "\n",
+    "                ok2, res2_or_err = await safe_call(session, \"get_general_area_info\", {\"query\": user_query}, timeout_s=10.0)\n",
+    "                if ok2:\n",
+    "                    state[\"location_result\"] = content_to_text(res2_or_err)\n",
+    "                else:\n",
+    "                    state[\"fallback_error\"] = res2_or_err\n",
+    "\n",
+    "\n",
+    "    # ---- Response phase (no tools; just state)\n",
+    "    if state.get(\"location_result\"):\n",
+    "        if state[\"primary_location_failed\"]:\n",
+    "            return (\n",
+    "                f\"Primary lookup failed ({state.get('primary_error')}).\\n\"\n",
+    "                f\"Fallback result:\\n{state['location_result']}\"\n",
+    "            )\n",
+    "        else:\n",
+    "            return f\"Precise result:\\n{state['location_result']}\"\n",
+    "    else:\n",
+    "        return (\n",
+    "            \"Sorry — I couldn't retrieve location information.\\n\"\n",
+    "            f\"Primary error: {state.get('primary_error')}\\n\"\n",
+    "            f\"Fallback error: {state.get('fallback_error')}\"\n",
+    "        )\n",
+    "\n",
+    "# Databricks notebooks already have an event loop → use top-level await\n",
+    "await run_robust_location_flow(\"1 Main St, New York, NY\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6149991d-0df0-45be-a35a-8bfb8d0868cb",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Cell 18"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "def format_location_result(state: dict) -> str:\n",
+    "    result = state.get(\"location_result\")\n",
+    "    if isinstance(result, str):\n",
+    "        return result\n",
+    "    return json.dumps(result, indent=2)\n",
+    "\n",
+    "# in your final section:\n",
+    "if state.get(\"location_result\"):\n",
+    "    if state[\"primary_location_failed\"]:\n",
+    "        print(\n",
+    "            \"Precise lookup couldn’t be completed (missing ZIP code).\\n\"\n",
+    "            f\"Fallback (general) result:\\n{format_location_result(state)}\"\n",
+    "        )\n",
+    "    else:\n",
+    "        print(f\"Precise result:\\n{format_location_result(state)}\")"
+   ]
   }
  ],
  "metadata": {
