Update MCP Notebooks

--- a/agentic_design/04_mcp.ipynb
+++ b/agentic_design/04_mcp.ipynb
@@ -83,16 +83,7 @@
      "title": ""
     }
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wrote: /tmp/mcp_server.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "server_code = r'''\n",
     "from mcp.server.fastmcp import FastMCP\n",
@@ -132,16 +123,7 @@
      "title": ""
     }
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tools: ['add']\nadd(2, 3) => [TextContent(type='text', text='5', annotations=None, meta=None)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, sys\n",
     "from mcp import ClientSession, StdioServerParameters\n",
@@ -196,16 +178,7 @@
      "title": ""
     }
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wrote /tmp/server.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "server_code = r'''\n",
     "from mcp.server.fastmcp import FastMCP\n",
@@ -257,16 +230,7 @@
      "title": ""
     }
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tools: ['greet']\nResult: [TextContent(type='text', text='Hello, Databricks! Nice to meet you.', annotations=None, meta=None)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, sys\n",
     "from mcp import ClientSession, StdioServerParameters\n",
@@ -305,16 +269,7 @@
      "title": ""
     }
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wrote /tmp/server_http.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "server_code = r'''\n",
     "from fastmcp import FastMCP\n",
@@ -350,16 +305,7 @@
      "title": ""
     }
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "server pid: 3839054\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import subprocess, sys\n",
     "proc = subprocess.Popen([sys.executable, \"/tmp/server_http.py\"])\n",
@@ -382,19 +328,7 @@
      "title": ""
     }
    },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "proc.terminate()\n",
     "proc.wait()"
@@ -432,7 +366,16 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated server.\n"
+     ]
+    }
+   ],
    "source": [
     "server_code = r'''\n",
     "from mcp.server.fastmcp import FastMCP\n",
@@ -570,7 +513,19 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'Primary lookup failed (Error executing tool get_precise_location_info: No ZIP code found; precise lookup failed.).\\nFallback result:\\n{\\n  \"ok\": true,\\n  \"type\": \"general\",\\n  \"city_guess\": \"New York\",\\n  \"parts\": [\\n    \"1 Main St\",\\n    \"New York\",\\n    \"NY\"\\n  ]\\n}'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "async def run_robust_location_flow(user_query: str):\n",
     "    state.clear()\n",
@@ -646,7 +601,16 @@
      "title": "Cell 18"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precise lookup couldn’t be completed (missing ZIP code).\nFallback (general) result:\n{\n  \"ok\": true,\n  \"type\": \"general\",\n  \"city_guess\": \"New York\",\n  \"parts\": [\n    \"1 Main St\",\n    \"New York\",\n    \"NY\"\n  ]\n}\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "\n",
